# pk

./: Cargo.toml  LICENSE  README.md  default.client.toml  design.md  filetypes.toml
pk-client/: Cargo.toml
pk-client/src/: buffer.rs  command.rs  config.rs  editor_state.rs  line_command.rs  main.rs  mode.rs  motion.rs  piece_table_render.rs  server.rs  syntax_highlight.rs
pk-common/: Cargo.toml
pk-common/src/: command.rs  lib.rs  mode.rs  motion.rs  piece_table.rs
pk-runic-client/: Cargo.toml
pk-runic-client/src/: main.rs  mode.rs  piece_table_render.rs
pk-server/: Cargo.toml
pk-server/src/: main.rs
src/: main.rs  piece_table.rs
uproc/: Cargo.toml
uproc/src/: lib.rs
