[package]
name = "pk-client"
version = "0.3.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
nng = "0.5"
pk-common = { path = "../pk-common" }
runic = { path = "../../runic", version = "0.8" }
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
toml = "0.5"

[dependencies.nng-sys]
features = ["cmake-vs2019"]
