[package]
name = "pk-client"
version = "0.5.1"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
nng = "1.0.0-rc"
pk-common = { path = "../pk-common" }
runic = { git = "https://github.com/andrew-pa/runic", version = "0.8" }
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
toml = "0.5"
directories-next = "1"
pico-args = "0.3"
fuzzy-matcher = "0.3"
syntect="4"
copypasta = "0.7"

