[package]
name = "pk-runic-client"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nng = "0.5"
pk-common = { path = "../pk-common" }
runic = { path = "../../runic", version = "0.7" }
regex = "1"
lazy_static = "1"
