[package]
name = "pk-runic-client"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nng = "0.5"
pk-common = { path = "../pk-common" }
runic = { path = "../../runic", version = "0.8" }
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"

[dependencies.nng-sys]
features = ["cmake-vs2019"]
