[package]
name = "pk-server"
version = "0.4.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nng = "0.5"
pk-common = { path = "../pk-common" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
threadpool = "1"
toml = "0.5"

[dependencies.nng-sys]
features = ["cmake-vs2019"]
