[package]
name = "pk-server"
version = "0.5.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
nng = "1.0.0-rc"
pk-common = { path = "../pk-common" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
threadpool = "1"
toml = "0.5"
directories-next = "1"
pico-args = "0.3"

